--- a/POS_APP/POS_APP.csproj
+++ b/POS_APP/POS_APP.csproj
@@ -17,6 +17,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,6 +38,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>12a72aac-0acd-455a-a74b-58535e628c0a %281%29.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=4.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.4.4.0\lib\net462\ControlzEx.dll</HintPath>
@@ -48,7 +52,7 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro, Version=2.0.0.0, Culture=neutral, PublicKeyToken=51482d6f650b2b3f, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.2.4.3\lib\net47\MahApps.Metro.dll</HintPath>
+      <HintPath>..\packages\MahApps.Metro.2.3.2\lib\net452\MahApps.Metro.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro.IconPacks, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.IconPacks.4.8.0\lib\net47\MahApps.Metro.IconPacks.dll</HintPath>
@@ -157,12 +161,22 @@
     <Reference Include="Microsoft.Build.Tasks.v4.0" />
     <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.19\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.31\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
+    <Reference Include="Prism, Version=8.0.0.1909, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
+      <HintPath>..\packages\Prism.Core.8.0.0.1909\lib\net47\Prism.dll</HintPath>
+    </Reference>
+    <Reference Include="Prism.Wpf, Version=8.0.0.1909, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
+      <HintPath>..\packages\Prism.Wpf.8.0.0.1909\lib\net47\Prism.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Common, Version=4.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Drawing.Common.5.0.0\lib\net461\System.Drawing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
@@ -191,6 +205,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Admin\Settings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Client\PosWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -205,6 +223,9 @@
     <Compile Include="Admin\ProductWindow.xaml.cs">
       <DependentUpon>ProductWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Admin\Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -215,12 +236,17 @@
     <Compile Include="DataLayer\DataAccessLayer.cs" />
     <Compile Include="Data\POS_DB.cs" />
     <Compile Include="Data\Tables\Category.cs" />
+    <Compile Include="Data\Tables\Company.cs" />
     <Compile Include="Data\Tables\Customers.cs" />
     <Compile Include="Data\Tables\Products.cs" />
     <Compile Include="Data\Tables\SellRecords.cs" />
     <Compile Include="Helper\BuildQty.cs" />
+    <Compile Include="Helper\ColorList.cs" />
     <Compile Include="Helper\Invoice.cs" />
     <Compile Include="Helper\ObservableCollectionExtensionMethods.cs" />
+    <Compile Include="Helper\Order.cs" />
+    <Compile Include="Helper\Paging.cs" />
+    <Compile Include="Helper\PrintJob.cs" />
     <Compile Include="Helper\RowToIndexConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -231,6 +257,26 @@
     <Compile Include="Migrations\202102021748408_IntitialDb.cs" />
     <Compile Include="Migrations\202102021748408_IntitialDb.designer.cs">
       <DependentUpon>202102021748408_IntitialDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102061222165_CompanyEnity.cs" />
+    <Compile Include="Migrations\202102061222165_CompanyEnity.designer.cs">
+      <DependentUpon>202102061222165_CompanyEnity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102061238007_CompanyEnity1.cs" />
+    <Compile Include="Migrations\202102061238007_CompanyEnity1.designer.cs">
+      <DependentUpon>202102061238007_CompanyEnity1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102061448548_CompanyEnity2.cs" />
+    <Compile Include="Migrations\202102061448548_CompanyEnity2.designer.cs">
+      <DependentUpon>202102061448548_CompanyEnity2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102061505074_CompanyEnity3.cs" />
+    <Compile Include="Migrations\202102061505074_CompanyEnity3.designer.cs">
+      <DependentUpon>202102061505074_CompanyEnity3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102100708589_UpdateCust.cs" />
+    <Compile Include="Migrations\202102100708589_UpdateCust.designer.cs">
+      <DependentUpon>202102100708589_UpdateCust.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -249,6 +295,21 @@
     <EmbeddedResource Include="Migrations\202102021748408_IntitialDb.resx">
       <DependentUpon>202102021748408_IntitialDb.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061222165_CompanyEnity.resx">
+      <DependentUpon>202102061222165_CompanyEnity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061238007_CompanyEnity1.resx">
+      <DependentUpon>202102061238007_CompanyEnity1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061448548_CompanyEnity2.resx">
+      <DependentUpon>202102061448548_CompanyEnity2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061505074_CompanyEnity3.resx">
+      <DependentUpon>202102061505074_CompanyEnity3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102100708589_UpdateCust.resx">
+      <DependentUpon>202102100708589_UpdateCust.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -266,6 +327,10 @@
     <Folder Include="Asset\" />
     <Folder Include="ProductImage\" />
     <Folder Include="Sales\" />
+    <Folder Include="Style\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="12a72aac-0acd-455a-a74b-58535e628c0a %281%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
