--- a/POS_APP/packages.config
+++ b/POS_APP/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="MahApps.Metro" version="2.4.3" targetFramework="net472" />
+  <package id="MahApps.Metro" version="2.3.2" targetFramework="net452" requireReinstallation="true" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.7" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.1.5" targetFramework="net472" />
-  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
+  <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
 </packages>
