--- a/POS_APP/packages.config
+++ b/POS_APP/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.3.2" targetFramework="net452" requireReinstallation="true" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.7" targetFramework="net472" />
